--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE resources [
+    <!ENTITY authorName "Patryk K.">
+    ]>
+
 <resources>
     <string name="app_name">AstroCalculator</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_exit">Exit</string>
+    <string name="action_home">Main</string>
+    <string name="author">Author: &authorName;</string>
+    <string name="projectDescription">Academical project</string>
+    <string name="contact">Contact on Github: patrykxk</string>
 </resources>
