added sun and moon icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,12 +12,13 @@
     <string name="author">Author: &authorName;</string>
     <string name="projectDescription">Academical project</string>
     <string name="contact">Contact on Github: patrykxk</string>
-    <string name="latitude">Latitude:</string>
-    <string name="longitude">Longitude:</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
     <string name="coordinateSettings">Coordinates:</string>
     <string name="frequencySettings">Refreshing frequency</string>
-    <string name="time">Minutes:</string>
+    <string name="time">Minutes</string>
     <string name="apply">Apply Settings</string>
+    <string name="azimuth">Azimuth</string>
     <string name="sunrise">Sunrise:</string>
     <string name="sunset">Sunset</string>
     <string name="Dusk">Dusk</string>
