Changing city in settings for weather, and update onResume

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="contact">Contact on Github: patrykxk</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
-    <string name="coordinateSettings">Coordinates:</string>
+    <string name="locationSettings">Location</string>
+    <string name="city">City</string>
     <string name="frequencySettings">Refreshing frequency</string>
     <string name="time">Minutes</string>
     <string name="apply">Apply Settings</string>
