--- a/app/src/main/res/values-xlarge-v11/strings.xml
+++ b/app/src/main/res/values-xlarge-v11/strings.xml
@@ -30,4 +30,5 @@
     <string name="fullMoon">Full moon</string>
     <string name="sun">Sun</string>
     <string name="moon">Moon</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
