--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="place_not_found">Sorry, no weather data found.</string>
     <string name="Units">Units</string>
     <string name="Cities">Your cities</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
